fix overflow for overview

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ main {
     max-height: 100%;
     transform: translateY(101%);
     transition: transform 0.3s ease-in;
+    overflow-y: auto;
     
 }
 
